# kuksa-common

./: .gitignore  .pre-commit-config.yaml  README.md
jwt/: README.md  actuate-provide-all.token  authorization.md  createToken.py  jwt.key  jwt.key.pub  provide-all.token  provide-vehicle-speed.token  read-all.token  read-vehicle-speed.token  recreateJWTkeyPair.sh  requirements.txt
sbom-tools/: README.md  pyproject.toml
sbom-tools/example/: example-curation.yaml  example.cdx.json
sbom-tools/src/kuksa_sbom_utils/: __init__.py  collectlicensefiles.py
sbom-tools/src/kuksa_sbom_utils/util/: maplicensefile.py
tls/: README.md
vss/: README.md
