[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "kuksa_sbom_utils"
version = "0.0.1"
authors = [
  { name="Eclipse KUKSA project", email="sebastian.schildt@de.bosch.com" },
]
description = "KUKSA SBOM utils"
readme = "Readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml",
]

[project.scripts]
collectlicensefiles = "kuksa_sbom_utils.collectlicensefiles:main"

[project.urls]
Homepage = "https://github.com/eclipse-kuksa/kuksa-common"
